fixed spacings in input for search overlay see #223

--- a/assets/scss/components/_search-form.scss
+++ b/assets/scss/components/_search-form.scss
@@ -100,7 +100,6 @@
 
 	.search-field {
 		border: 0;
-		padding: 0;
 		color: $black;
 		font-size: 72px;
 		outline: 0;
@@ -113,7 +112,6 @@
 
 		@include query-below($lap) {
 			font-size: 48px;
-			margin-bottom: 24px;
 		}
 	}
 
